--- a/finaid.html
+++ b/finaid.html
@@ -13,7 +13,7 @@
         @import url('https://fonts.googleapis.com/css?family=Poppins');
         </style>
         
-        <link href="./Resources/css/index.css" type="text/css" rel="stylesheet">
+          <link href="resources/css/index.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         
