--- a/finances.html
+++ b/finances.html
@@ -46,8 +46,8 @@
         <div class="boxybox">
         <h3>Navigating Scholarships and Financial Aid</h3>
         <h5>Taylor Marks | November 1, 2017 | 3:00pm | Venice, Italy</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper porttitor eros, sed suscipit arcu auctor quis. Nam sit amet vehicula justo. Fusce tempus diam a ligula euismod, a interdum tortor lobortis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mollis maximus sem. Sed lorem neque, malesuada non ultrices sed, iaculis eu felis. Fusce cursus eget dolor eu aliquet. Duis tristique justo ac augue consectetur, sed convallis tellus lacinia. Quisque consectetur luctus dui, nec ultrices quam porttitor a. Aenean elementum enim quam, rhoncus scelerisque massa tincidunt ac. Pellentesque porta auctor nunc ut condimentum. Suspendisse in interdum nunc. Vestibulum sodales ante in turpis lobortis dignissim. Fusce ullamcorper, risus ut dapibus vehicula, risus enim vehicula magna, sed rutrum tellus neque vel leo.
-</p>
+        <p>Study abroad is a great experience that everyone should be able to take advantage of. However, it also costs a lot of money. Between the astronomical costs of flights, living expenses, food, tuition, school supplies, travel supplies, insurance, and a whole host of other things, the money adds up. Most students lack the funds up front to pay these bills. But, luckily, there is still hope. Many programs offer substantial scholarships to students, usually based on merit or financial need. If you don't quite fit those two categories, fear not! There are external sources for scholarships, as well. Simply Googling "study abroad scholarships" brings up a hefty list of results...
+        </p>
         <p><a href="finaid.html" class="btn btn-primary" role="button">Read</a>
         </div>
         </div>
