--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <p>You might think you know public transportation. If you live in a city with subways and buses, you might think you've got it down pat. But in Europe, depending on the location, it can be very different...</div>
         <div class="col-md-4 col-sm-6 col-xs-12">
             <h3><a href="finaid.html">Navigating Scholarships and Financial Aid</a></h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+<p>Study abroad is a great experience that everyone should be able to take advantage of. However, it also costs a lot of money. Between the astronomical costs of flights, living expenses, food, tuition, school supplies, travel supplies...
         </div>
     </div>
     <p><h4>Older Posts</h4></p>
