--- a/finances.html
+++ b/finances.html
@@ -57,9 +57,15 @@
         <div class="boxybox">
         <h3>How to Save Money Overseas</h3>
         <h5>Taylor Marks | September 16, 2017 | 9:20am | Donore, Ireland</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper porttitor eros, sed suscipit arcu auctor quis. Nam sit amet vehicula justo. Fusce tempus diam a ligula euismod, a interdum tortor lobortis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mollis maximus sem. Sed lorem neque, malesuada non ultrices sed, iaculis eu felis. Fusce cursus eget dolor eu aliquet. Duis tristique justo ac augue consectetur, sed convallis tellus lacinia. Quisque consectetur luctus dui, nec ultrices quam porttitor a. Aenean elementum enim quam, rhoncus scelerisque massa tincidunt ac. Pellentesque porta auctor nunc ut condimentum. Suspendisse in interdum nunc. Vestibulum sodales ante in turpis lobortis dignissim. Fusce ullamcorper, risus ut dapibus vehicula, risus enim vehicula magna, sed rutrum tellus neque vel leo.
-
-</p>
+        <p>Let's be real: when you study abroad, you probably won't die. But your bank account might, hence the the tombstone picture. One of the only downsides to studying abroad is the toll it takes on your bank account. Here are some quick tips to help you maintain some financial responsibility during your travels!
+        </p>
+        <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
         <p><a href="savemoney.html" class="btn btn-primary" role="button">Read</a></p>
         </div>
         </div>
