--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p>Imagine this- taking a wholesome trip to Vatican City, staring in awe at ancient art, statues, and artifacts, feeling Jesus, then reaching into your purse only to discover your wallet is missing. You wonder if maybe you left it at your hostel, but alas, when you return, it isn't there either...</div>
             <div class="col-md-4 col-sm-6 col-xs-12">
             <h3><a href="savemoney.html">How to Save Money Overseas</a></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Let's be real: when you study abroad, you probably won't die. But your bank account might, hence the the tombstone picture. One of the only downsides to studying abroad is the toll it takes on your bank account...</p>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12">
             <h3><a href="galway.html">Galway Girl</a></h3>
