--- a/transportpost.html
+++ b/transportpost.html
@@ -60,23 +60,31 @@
     <div class="item active">
       <img width="400px" height="300px" src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Lufthansa_DC-10_%286074181571%29.jpg" alt="Los Angeles">
     <div class="carousel-caption">
-        <p style="text-align:center;">LA is always so much fun!</p>
+        <p style="text-align:center;">Lufthansa is a good alternative to Ryanair</p>
       </div>
     </div>
 
     <div class="item">
       <img width="400px" height="300px" src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Bus_Eireann%2C_Strabane%2C_January_2010.JPG" alt="Los Angeles">
+      <div class="carousel-caption">
+        <p style="text-align:center;">Buses are a cheap, reliable form of transport</p>
+    </div>
     </div>
 
     <div class="item">
       <img width="400px" height="200px" src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Frecciarossa.JPG" alt="Los Angeles">
+    <div class="carousel-caption">
+        <p style="text-align:center;">Trains can be expensive and confusing, just be careful</p>
+    </div>
     </div>
     
     <div class="item">
         <img width="400px" height="200px" src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Lancaster_Gate_tube.jpg">
+    <div class="carousel-caption">
+        <p style="text-align:center;">Subways are very cheap and quick, but not as reliable</p>
+  </div>
     </div>
   </div>
-
 
   <a class="left carousel-control" href="#myCarousel" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left"></span>
