--- a/edinburgh.html
+++ b/edinburgh.html
@@ -50,44 +50,10 @@
 <p>
  <p class="bloggy">I first got into Edinburgh after a few days of snow, and, while most of it had melted, there was still a light dusting on some of the homes I passed while on the bus to the airport. I had a feeling that the trip would be magical, and it did not disappoint. Edinburgh is a gothic city with a dark, intricate skyline but with the warmest and kindest people.
 
-Although traversing the city was a bit of a struggle for someone who had unknowingly broken her ankle, it was still marvelous to see all of the closes, many of which were decorated for Christmas. My first point of interest was Edinburgh Castle, which rests atop a hill. It was incredible, and not just because bagpipe rock music played in nearly every exhibit. Outside, on the famous Royal Mile that led up to the Castle, men in kilts played bagpipes and shops sold the softest scarves I'd ever touched. I stopped somewhere for a sandwich and discovered that haggis flavored chips were a thing. I regret not buying a bag for my more adventurous family members. Later on, on the same day, I met with a group doing a ghost tour of Edinburgh's old (and haunted) wine vaults and graveyards. I didn't see or feel any ghosts, sadly, but it was still an unforgettable experience. My next experience in Edinburgh occurred outside of Edinburgh. I took a tour to Loch Ness, because, come on, that's necessary when in Scotland. We also went to Glencoe and maneuvered through the highlands. Loch Ness wound up being the least exciting thing about the tour (but it was still exciting, of course). Once again, the paranormal avoided me, and Nessie did not make an appearance. I did see a dog, though, and that made up for it in full. We got back around 7pm, so I decided to visit the storied Christmas Market. It was everything I had ever hoped for- cute little stands operated by cute little Scots with cute little wares. And the food was exceptional. I wound up having a fried crab sandwich with mulled wine and a fresh pretzel, because where can you get all of that in the States at one place? The Christmas Market also had lots of rides that lit up the area with neon flashes. I decided not to partake, but they certainly looked fun. The next day, I visited again to pick up a few things I had been eyeing and spend the rest of the cash I had on me. Then I hopped on the plane, wishing I could stay. But I know I'll be back.
+Although traversing the city was a bit of a struggle for someone who had unknowingly broken her ankle, it was still marvelous to see all of the closes, many of which were decorated for Christmas. My first point of interest was Edinburgh Castle, which rests atop a hill. It was incredible, and not just because bagpipe rock music played in nearly every exhibit. Outside, on the famous Royal Mile that led up to the Castle, men in kilts played bagpipes and shops sold the softest scarves I'd ever touched. I stopped somewhere for a sandwich and discovered that haggis flavored chips were a thing. I regret not buying a bag for my more adventurous family members. Later on, on the same day, I met with a group doing a ghost tour of Edinburgh's old (and haunted) wine vaults and graveyards. I didn't see or feel any ghosts, sadly, but it was still an unforgettable experience. My next experience in Edinburgh occurred outside of Edinburgh. I took a tour to Loch Ness, because, come on, that's necessary when in Scotland. We also went to Glencoe and maneuvered through the highlands. Loch Ness wound up being the least exciting thing about the tour (but it was still exciting, of course). Once again, the paranormal avoided me, and Nessie did not make an appearance. I did see a dog, though, and that made up for it in full. We got back around 7pm, so I decided to visit the storied Christmas Market. It was everything I had ever hoped for- cute little stands operated by cute little Scots with cute little wares. And the food was exceptional. I wound up having a fried crab sandwich with mulled wine and a fresh pretzel, because where can you get all of that in the States at one place? The Christmas Market also had lots of rides that lit up the area with neon flashes. I decided not to partake, but they certainly looked fun. The next day, I visited again to pick up a few things I had been eyeing and spend the rest of the cash I had on me.
 </p>
-<div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 400px; height: 250px; float: left; margin-bottom:10px; margin-right:20px;">
-
-
-  <div class="carousel-inner">
-    <div class="item active">
-      <img width="400px" height="300px" src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Lufthansa_DC-10_%286074181571%29.jpg" alt="Los Angeles">
-    <div class="carousel-caption">
-        <p style="text-align:center;">LA is always so much fun!</p>
-      </div>
-    </div>
-
-    <div class="item">
-      <img width="400px" height="300px" src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Bus_Eireann%2C_Strabane%2C_January_2010.JPG" alt="Los Angeles">
-    </div>
-
-    <div class="item">
-      <img width="400px" height="200px" src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Frecciarossa.JPG" alt="Los Angeles">
-    </div>
-    
-    <div class="item">
-        <img width="400px" height="200px" src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Lancaster_Gate_tube.jpg">
-    </div>
-  </div>
-
-
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+ <img width="400px" src="https://i.imgur.com/LZpfqHL.jpg" style="float:left; padding-right:20px; padding-bottom:5px;">
 <p class="bloggy">
-    I first got into Edinburgh after a few days of snow, and, while most of it had melted, there was still a light dusting on some of the homes I passed while on the bus to the airport. I had a feeling that the trip would be magical, and it did not disappoint. Edinburgh is a gothic city with a dark, intricate skyline but with the warmest and kindest people.
 
 Although traversing the city was a bit of a struggle for someone who had unknowingly broken her ankle, it was still marvelous to see all of the closes, many of which were decorated for Christmas. My first point of interest was Edinburgh Castle, which rests atop a hill. It was incredible, and not just because bagpipe rock music played in nearly every exhibit. Outside, on the famous Royal Mile that led up to the Castle, men in kilts played bagpipes and shops sold the softest scarves I'd ever touched. I stopped somewhere for a sandwich and discovered that haggis flavored chips were a thing. I regret not buying a bag for my more adventurous family members. Later on, on the same day, I met with a group doing a ghost tour of Edinburgh's old (and haunted) wine vaults and graveyards. I didn't see or feel any ghosts, sadly, but it was still an unforgettable experience. My next experience in Edinburgh occurred outside of Edinburgh. I took a tour to Loch Ness, because, come on, that's necessary when in Scotland. We also went to Glencoe and maneuvered through the highlands. Loch Ness wound up being the least exciting thing about the tour (but it was still exciting, of course). Once again, the paranormal avoided me, and Nessie did not make an appearance. I did see a dog, though, and that made up for it in full. We got back around 7pm, so I decided to visit the storied Christmas Market. It was everything I had ever hoped for- cute little stands operated by cute little Scots with cute little wares. And the food was exceptional. I wound up having a fried crab sandwich with mulled wine and a fresh pretzel, because where can you get all of that in the States at one place? The Christmas Market also had lots of rides that lit up the area with neon flashes. I decided not to partake, but they certainly looked fun. The next day, I visited again to pick up a few things I had been eyeing and spend the rest of the cash I had on me.
 </p>
