--- a/finaid.html
+++ b/finaid.html
@@ -52,40 +52,8 @@
 
 
  </p>
-<div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 400px; height: 250px; float: left; margin-bottom:10px; margin-right:20px;">
+<img width="400px" src="https://c1.staticflickr.com/4/3807/9281116354_f698c92834.jpg" style="float:left; padding-right:20px; padding-bottom:5px;">
 
-
-  <div class="carousel-inner">
-    <div class="item active">
-      <img width="400px" height="300px" src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Lufthansa_DC-10_%286074181571%29.jpg" alt="Los Angeles">
-    <div class="carousel-caption">
-        <p style="text-align:center;">LA is always so much fun!</p>
-      </div>
-    </div>
-
-    <div class="item">
-      <img width="400px" height="300px" src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Bus_Eireann%2C_Strabane%2C_January_2010.JPG" alt="Los Angeles">
-    </div>
-
-    <div class="item">
-      <img width="400px" height="200px" src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Frecciarossa.JPG" alt="Los Angeles">
-    </div>
-    
-    <div class="item">
-        <img width="400px" height="200px" src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Lancaster_Gate_tube.jpg">
-    </div>
-  </div>
-
-
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 <p class="bloggy">But, luckily, there is still hope. Many programs offer substantial scholarships to students, usually based on merit or financial need. If you don't quite fit those two categories, fear not! There are external sources for scholarships, as well. Simply Googling "study abroad scholarships" brings up a hefty list of results. Most scholarships are related to a specific region, or for specific majors, and have guidelines as to how the money can be spent. Regardless of your intended region of study or your major, you should still check it out. There are some really interesting opportunities out there. If scholarships fall through, there is still a chance that you can use financial aid you already receive to help offset the costs of attending school overseas. If you receive financial aid from the federal government, you can, depending on the type of aid it is, use it for study abroad at accredited institutions. If you do not receive financial aid, you may be able to go to the financial aid office at your university and ask them what your options are. They will usually be more than willing to try to help you out, especially since studying abroad is becoming a lucrative addition to resumés. If scholarships or financial aid don't work, there's always using your network of family and friends! Try asking family members to forward you money that would have been given to you on your birthday or on a holiday so that you can afford this amazing experience. In the end, all of the effort is worth it!
 
 
