--- a/galway.html
+++ b/galway.html
@@ -52,40 +52,7 @@
 
 However, Galway was facing a housing crisis and, as such, this was all experienced while living in a hostel. Yes, for four months I lived in a postage stamp with three other girls, crammed into bunk beds, groceries scattered about the floor, bathroom almost always occupied. But dorm living at home had prepared me for this, and we made it out okay. We even managed, by some miracle, to all stay friends afterward. Galway was too good to tear us apart. I will always miss Shop Street, with its bustling souvenir shops, tattoo parlors (including the one where I got my tattoo), and tiny restaurants. Quay Street, filled mostly with large, more fancy restaurants and decorated with outside seating all year round, will hold a special place in my heart for years to come. All of these a short walk from my hostel. A bit farther was Salthill, the beachy resort area that hosted expensive hotels and a few casinos, but was somehow even more chill than downtown Galway. Galway also served as the departure point for most tour buses going to the Aran Islands, the Cliffs of Moher, or Connemara. A few tours even took visitors to the Giants Causeway, all the way up in Belfast. In Galway, there was always something happening or something to do. I would talk about the school, the National University of Ireland at Galway, but let's be real- no one cares about that. It's similar to American universities, it's just Irish and the professors' names are hard to pronounce. That's another thing about Ireland- none of the words are pronounced like they're spelled. In Irish, Galway is spelled "Gailihm," which is still pronounced like Galway. It makes no sense. And it's particularly frustrating when you're trying to read the Irish part of the road sign to show off but fail miserably. But despite of (or, rather, because of) Ireland's quirks, I still love it and miss it every day.
  </p>
-<div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 400px; height: 250px; float: left; margin-bottom:10px; margin-right:20px;">
-
-
-  <div class="carousel-inner">
-    <div class="item active">
-      <img width="400px" height="300px" src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Lufthansa_DC-10_%286074181571%29.jpg" alt="Los Angeles">
-    <div class="carousel-caption">
-        <p style="text-align:center;">LA is always so much fun!</p>
-      </div>
-    </div>
-
-    <div class="item">
-      <img width="400px" height="300px" src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Bus_Eireann%2C_Strabane%2C_January_2010.JPG" alt="Los Angeles">
-    </div>
-
-    <div class="item">
-      <img width="400px" height="200px" src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Frecciarossa.JPG" alt="Los Angeles">
-    </div>
-    
-    <div class="item">
-        <img width="400px" height="200px" src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Lancaster_Gate_tube.jpg">
-    </div>
-  </div>
-
-
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+<img width="400px" src="https://i.imgur.com/NKEhmIN.jpg" style="float:left; padding-right:20px; padding-bottom:5px;">
 <p class="bloggy">
     And Galway surely was magnificent, in the way only a seaside Irish town could be. The faint hint of seawater in the wind, the seagulls on the rooftops, the drunken cheers in the night- it was like living in another world.
 
