--- a/savemoney.html
+++ b/savemoney.html
@@ -46,50 +46,51 @@
         <br>
         <h5 style="float:left">Donore, Ireland</h5><h5 style="float:right; margin-right: 50px;"><a href="safety.html">Finances</h5></a>
     </div>
-    <img width="500px" src="https://i.imgur.com/sBrPyew.jpg" style="float:right; padding-left:20px; padding-bottom:20px;">
+    <img width="500px" src="https://i.imgur.com/MEqiKK4.jpg" style="float:right; padding-left:20px; padding-bottom:20px;">
 <p>
- <p class="bloggy">Study abroad is a great experience that everyone should be able to take advantage of. However, it also costs a lot of money. Between the astronomical costs of flights, living expenses, food, tuition, school supplies, travel supplies, insurance, and a whole host of other things, the money adds up. Most students lack the funds up front to pay these bills. But, luckily, there is still hope. Many programs offer substantial scholarships to students, usually based on merit or financial need. If you don't quite fit those two categories, fear not! There are external sources for scholarships, as well. Simply Googling "study abroad scholarships" brings up a hefty list of results. Most scholarships are related to a specific region, or for specific majors, and have guidelines as to how the money can be spent. Regardless of your intended region of study or your major, you should still check it out. There are some really interesting opportunities out there. If scholarships fall through, there is still a chance that you can use financial aid you already receive to help offset the costs of attending school overseas. If you receive financial aid from the federal government, you can, depending on the type of aid it is, use it for study abroad at accredited institutions. If you do not receive financial aid, you may be able to go to the financial aid office at your university and ask them what your options are. They will usually be more than willing to try to help you out, especially since studying abroad is becoming a lucrative addition to resumés. If scholarships or financial aid don't work, there's always using your network of family and friends! Try asking family members to forward you money that would have been given to you on your birthday or on a holiday so that you can afford this amazing experience.
-
+ <p class="bloggy">Let's be real: when you study abroad, you probably won't die. But your bank account might, hence the the tombstone picture. One of the only downsides to studying abroad is the toll it takes on your bank account. Here are some quick tips to help you maintain some financial responsibility during your travels!
+<br>
+<br>
+<b>Start Saving Before You Leave</b>
+<br>
+<br>
+A simple, and possibly obvious, first step. Saving money ahead of time and having as much on you as possible will minimize the damage you will unavoidably do on your bank account. Cut back on frivolous spending, get a job, ask your family and friends for money, start a GoFundMe, panhandle on the streets- do what you must to save up. Trust me, you will wish you had saved that $5 you spent on your Frappuccino when you see a cute souvenir that you can't afford.
+<br>
+<br>
+<b>Cook for Yourself</b>
+<br>
+<br>
+You might think, "Why cook when I can sample worldy cuisines?" While eating out ocassionally won't bust your budget, it's important to realize that cooking for yourself doesn't have to deprive you of your host country's delicacies. It's a much cheaper alternative, as you will have leftovers to cherish for days!
 
  </p>
-<div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 400px; height: 250px; float: left; margin-bottom:10px; margin-right:20px;">
+ <img width="400px" src="http://www.publicdomainpictures.net/pictures/160000/velka/billets-de-banque-euros-1456165834Zs3.jpg" style="float:left; padding-right:20px; padding-bottom:5px;">
+<p class="bloggy">
+<b>Stay in Hostels when Traveling</b>
+<br>
+<br>
+Don't stay in costly hotels. Stay in hostels, because one letter can make a world of difference. In hostels, you get many of the same amenities as a hotel, but you share a room with other guests. Most hostels have rooms of 6 or 8, and are usually separated by gender. Bathrooms are usually shared, you might have to sleep in a bunk bed, and you probably have to store your personal belongings in a little cage-like box under your bed, but, all-in-all, the money saved makes it absolutely worth it. Just make sure the hostel is reputable.
+<br>
+<br>
+<b>Use Cheap Airlines...</b>
+<br>
+<br>
+Airlines like Ryanair and EasyJet offer no-frills flight service, meaning your costs are significantly reduced. You can fly from Dubin to Paris for as little as 30 Euro, roundtrip! 
+<br>
+<br>
+<b>...BUT Research the Costs of Getting To and From the Airport</b>
+<br>
+<br>
+As I discuss in <a href="transportpost.html">this post</a>, finding transportation to and from the airports served by cheap airlines can negate the cost of your ticket. Do research beforehand and save yourself a couple of bucks.
+<br>
+<br>
 
-
-  <div class="carousel-inner">
-    <div class="item active">
-      <img width="400px" height="300px" src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Lufthansa_DC-10_%286074181571%29.jpg" alt="Los Angeles">
-    <div class="carousel-caption">
-        <p style="text-align:center;">LA is always so much fun!</p>
-      </div>
-    </div>
-
-    <div class="item">
-      <img width="400px" height="300px" src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Bus_Eireann%2C_Strabane%2C_January_2010.JPG" alt="Los Angeles">
-    </div>
-
-    <div class="item">
-      <img width="400px" height="200px" src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Frecciarossa.JPG" alt="Los Angeles">
-    </div>
-    
-    <div class="item">
-        <img width="400px" height="200px" src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Lancaster_Gate_tube.jpg">
-    </div>
-  </div>
-
-
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-<p class="bloggy">But, luckily, there is still hope. Many programs offer substantial scholarships to students, usually based on merit or financial need. If you don't quite fit those two categories, fear not! There are external sources for scholarships, as well. Simply Googling "study abroad scholarships" brings up a hefty list of results. Most scholarships are related to a specific region, or for specific majors, and have guidelines as to how the money can be spent. Regardless of your intended region of study or your major, you should still check it out. There are some really interesting opportunities out there. If scholarships fall through, there is still a chance that you can use financial aid you already receive to help offset the costs of attending school overseas. If you receive financial aid from the federal government, you can, depending on the type of aid it is, use it for study abroad at accredited institutions. If you do not receive financial aid, you may be able to go to the financial aid office at your university and ask them what your options are. They will usually be more than willing to try to help you out, especially since studying abroad is becoming a lucrative addition to resumés. If scholarships or financial aid don't work, there's always using your network of family and friends! Try asking family members to forward you money that would have been given to you on your birthday or on a holiday so that you can afford this amazing experience. In the end, all of the effort is worth it!
-
-
-
+<b>Have a friend hold you accountable</b>
+<br>
+<br>
+Shame is one of the world's best deterrents. Getting a friend to shame you out of spending too much of your precious money will work wonders.
+<br>
+<br>
+Following these simple tips could save you hundreds, if not thousands, of dollars. Your bank account will thank you.
 <p>
 <p>
            
