--- a/vaticanpost.html
+++ b/vaticanpost.html
@@ -49,44 +49,13 @@
     <img width="500px" src="https://i.imgur.com/sBrPyew.jpg" style="float:right; padding-left:20px; padding-bottom:20px;">
 <p>
  <p class="bloggy">Imagine this- taking a wholesome trip to Vatican City, staring in awe at ancient art, statues, and artifacts, feeling Jesus, then reaching into your purse only to discover your wallet is missing. You wonder if maybe you left it at your hostel, but alas, when you return, it isn't there either. Maybe it sounds outlandish. Who would prey on innocent tourists at the Vatican? Maybe it doesn't. It is a tourist spot, after all. Well, regardless of what you think, it does happen. It happened to me. I was robbed in God's house.
-Thankfully, I had the good sense to put my most important cards in a waist bag that was hidden under my shirt, so nothing too important was stolen. To the person who robbed me- enjoy a bunch of empty Starbucks cards and expired coupons. But some people aren't so lucky, which is why I'm here to tell you how to secure your belongings so you don't end up being one of the unfortunate victims of pickpocketing. Pickpocketing is much more prevalent in Europe than it is in the States. Preventing it is not hard, however. It just requires preparedness and creativity. One of the things that I found to be extremely helpful was the aforementioned waist pack. It's simply a small bag big enough to hold a passport, some cash, and any important cards or documentation that you really don't want to be stolen. It lays flat against your waist and is easily concealed under shirts so pickpockets can't access or see it. I kept mine on me at all times, and it saved me a lot of heartbreak and frustration (except that one time in London, but that's another story). Not only was it waterproof, a Godsend in European weather, it was also adjustable so it could be as snug or as loose as I wanted it. Another lifesaver was travel locks. They're small, usually TSA approved locks that can secure everything from luggage to handbags to hostel safety boxes. They came in handy as I was traveling across Europe. I would secure the zippers on my backpack, then secure the hostel safety box that most hostels provided. This way, no one could rob my backpack as I was walking to the hostel, and those I was sharing the hostel room with could not access my belongings. To avoid your handbag being pickpocketed, look for an anti-theft bag. These usually have zippers that aren't accessible to anyone other than the user. There are also creative ways to disguise important items so that they look less lucrative to thieves. For example, I've seen many a tutorial on how to disguise your wallet as a maxi pad. All of the items I've mentioned can easily be found on Amazon at reasonable prices. Stay safe out there, and try not to get robbed at the Vatican!
+Thankfully, I had the good sense to put my most important cards in a waist bag that was hidden under my shirt, so nothing too important was stolen. To the person who robbed me- enjoy a bunch of empty Starbucks cards and expired coupons. But some people aren't so lucky, which is why I'm here to tell you how to secure your belongings so you don't end up being one of the unfortunate victims of pickpocketing. Pickpocketing is much more prevalent in Europe than it is in the States. Preventing it is not hard, however. It just requires preparedness and creativity. One of the things that I found to be extremely helpful was the aforementioned waist pack. It's simply a small bag big enough to hold a passport, some cash, and any important cards or documentation that you really don't want to be stolen. It lays flat against your waist and is easily concealed under shirts so pickpockets can't access or see it. I kept mine on me at all times, and it saved me a lot of heartbreak and frustration (except that one time in London, but that's another story). Not only was it waterproof, a Godsend in European weather, it was also adjustable so it could be as snug or as loose as I wanted it. Another lifesaver was travel locks. They're small, usually TSA approved locks that can secure everything from luggage to handbags to hostel safety boxes. They came in handy as I was traveling across Europe. I would secure the zippers on my backpack, then secure the hostel safety box that most hostels provided. This way, no one could rob my backpack as I was walking to the hostel, and those I was sharing the hostel room with could not access my belongings. To avoid your handbag being pickpocketed, look for an anti-theft bag. These usually have zippers that aren't accessible to anyone other than the user. There are also creative ways to disguise important items so that they look less lucrative to thieves.
 
 
  </p>
-<div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 400px; height: 250px; float: left; margin-bottom:10px; margin-right:20px;">
 
+<img width="400px" src="https://cdn.pixabay.com/photo/2017/05/07/15/57/camera-2292843_1280.jpg" style="float:left; padding-right:20px; padding-bottom:5px;">
 
-  <div class="carousel-inner">
-    <div class="item active">
-      <img width="400px" height="300px" src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Lufthansa_DC-10_%286074181571%29.jpg" alt="Los Angeles">
-    <div class="carousel-caption">
-        <p style="text-align:center;">LA is always so much fun!</p>
-      </div>
-    </div>
-
-    <div class="item">
-      <img width="400px" height="300px" src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Bus_Eireann%2C_Strabane%2C_January_2010.JPG" alt="Los Angeles">
-    </div>
-
-    <div class="item">
-      <img width="400px" height="200px" src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Frecciarossa.JPG" alt="Los Angeles">
-    </div>
-    
-    <div class="item">
-        <img width="400px" height="200px" src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Lancaster_Gate_tube.jpg">
-    </div>
-  </div>
-
-
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 <p class="bloggy">But some people aren't so lucky, which is why I'm here to tell you how to secure your belongings so you don't end up being one of the unfortunate victims of pickpocketing. Pickpocketing is much more prevalent in Europe than it is in the States. Preventing it is not hard, however. It just requires preparedness and creativity. One of the things that I found to be extremely helpful was the aforementioned waist pack. It's simply a small bag big enough to hold a passport, some cash, and any important cards or documentation that you really don't want to be stolen. It lays flat against your waist and is easily concealed under shirts so pickpockets can't access or see it. I kept mine on me at all times, and it saved me a lot of heartbreak and frustration (except that one time in London, but that's another story). Not only was it waterproof, a Godsend in European weather, it was also adjustable so it could be as snug or as loose as I wanted it. Another lifesaver was travel locks. They're small, usually TSA approved locks that can secure everything from luggage to handbags to hostel safety boxes. They came in handy as I was traveling across Europe. I would secure the zippers on my backpack, then secure the hostel safety box that most hostels provided. This way, no one could rob my backpack as I was walking to the hostel, and those I was sharing the hostel room with could not access my belongings. To avoid your handbag being pickpocketed, look for an anti-theft bag. These usually have zippers that aren't accessible to anyone other than the user. There are also creative ways to disguise important items so that they look less lucrative to thieves. For example, I've seen many a tutorial on how to disguise your wallet as a maxi pad. All of the items I've mentioned can easily be found on Amazon at reasonable prices. Stay safe out there, and try not to get robbed at the Vatican!
 
 
